# test-ci-app

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py  foo.cpp  foo.h  gcovr.cfg  main.cpp  test.cpp
.github/: constants.env
.github/actions/setup_cache/: action.yml
.github/workflows/: build-linux.yml  build-windows.yml  build.yml  codeql.yml  test.yml
coverage/: index.allocator.h.aaf510883e67728fd07ac9704dbf0870.html  index.atomic_base.h.168d12e68a00f9140b7dcd1339f82f04.html  index.base.h.3840356ad79f692b87bd8b1ee06785a9.html  index.base.h.60621d5f0343643c640cb3e75da6aea6.html  index.base.h.b536004fc87bb6b7cc0029325cbe1a57.html  index.base.h.f5aa047c39e5d14299b6aeb7358ae59d.html  index.base.h.f809ef26ebd2697924a254358abbe60f.html  index.basic_string.h.8eb9ae90a80cc2aaed2bfea453500ccb.html  index.basic_string.tcc.1d20a43dedbc7644810166f510d36b8b.html  index.c++config.h.7a3eaa6ef0b315f46fa31665f7c56b7f.html  index.catch_assertion_handler.hpp.26642f1e9029391980a5d26077002347.html  index.catch_assertion_handler.hpp.69dbea3b84b3dd776091018ca742cae3.html  index.catch_assertion_handler.hpp.d866029ff8c588b1713f290311415662.html  index.catch_assertion_handler.hpp.e1e3c976258c64255b82791b49beb116.html  index.catch_assertion_handler.hpp.f90ba5e6d5668fb9b636f9cd49bfc8b7.html  index.catch_decomposer.hpp.0bbd89613dcfd332f23c669e793103ce.html  index.catch_decomposer.hpp.42e9df3c12dcea4a95cca6c41f0eb21a.html  index.catch_decomposer.hpp.56432ff145718b839a834cff6aeb03e7.html  index.catch_decomposer.hpp.ee321d9f322008a4c323d8b8e12884b4.html  index.catch_decomposer.hpp.fedfc895850f6e4dd2fe3602df4ab370.html  index.catch_source_line_info.hpp.42b4d277078d3c3b64b4e7e58f71d3f1.html  index.catch_source_line_info.hpp.5ed754c28c20101bb2877ca1bd1e80c2.html  index.catch_source_line_info.hpp.b6c20272702603e11309b58e01e5230a.html  index.catch_source_line_info.hpp.ba6787a33049dc05eb3c319cd3194fbd.html  index.catch_source_line_info.hpp.d3c88d07afb888a8aeb8484bbc8814db.html  index.catch_stringref.hpp.12430cd2043e3eaf3f3e01395ae2758e.html  index.catch_stringref.hpp.37235e06d4d41608afc3592819972d7e.html  index.catch_stringref.hpp.416aeb2a1a344f7dc126161ab250a2bb.html  index.catch_stringref.hpp.738e67a1be3380bacc5a61255737f4f1.html  index.catch_stringref.hpp.882fe111e44bc3018a718b7b1300ba38.html  index.catch_test_registry.hpp.18bb1b184c7e3f623f4be1d53b39ec3c.html  index.catch_test_registry.hpp.5b4594581533eabee968e2a44b8bbedd.html  index.catch_test_registry.hpp.753080119570691e10987aac3767c228.html  index.catch_test_registry.hpp.bd8568547dc792568ce38a524a20ef05.html  index.catch_test_registry.hpp.f12d751a33ba7fc49daa9fd081408784.html  index.catch_tostring.hpp.1ffd19eac39c9636db5aead9a329cee0.html  index.catch_tostring.hpp.52c761cea4951c0213309d224226b99c.html  index.catch_tostring.hpp.87c66e7d6c9b77da391570434fc38e30.html  index.catch_tostring.hpp.e04eb951d82b32543edf83e621cd4d5b.html  index.catch_tostring.hpp.f04e0a6f503cdc78c318a7efbcd8f9da.html  (+35 more)
